# spatialkit

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  epipolar_line_test.py  homography_test.py  parser.ipynb  pyproject.toml  readme.md  requirements.txt  setup.py  test.ipynb  test.py  test2.py  undistort_image.py
docs/: architecture.md  code_convention.md  exception_handling_policy.md  import_pattern.md
features/: homography_test.py  mono_camera_calibration.py  stereo_camera_calibration.py  undistort_image.py
features/epipolar_line_test/: epipolar_line_test.py  test_info.yaml
images/calibration_test/: info.txt
images/dscam_example/: info.yaml
images/dscam_examples/: info.yaml
images/ocam_example/: info.yaml
images/ocam_examples/: info.yaml
images/perspective_example/: info.yaml
module/: Camera.py  Pose.py  Rotation.py  __init__.py  camera.py  data.py  file_utils.py  geometry.py  hybrid_math.py  hybrid_operations.py  io.py  math.py  metrics.py  o3d.py  parser.py  plot.py  pose.py  rotation.py
module/__pycache__/: MultiViews.py
scripts/: README.md  build.sh  publish.sh  publish_test.sh  run_homography_test.sh
src/: __init__.py  camera.py  file_utils.py  geometry.py  hybrid_math.py  hybrid_operations.py  image_transform.py  metrics.py  parser.py  plot.py  rotation.py
src/cv_utils/: __init__.py  exceptions.py
src/spatialkit/: __init__.py
tests/: TESTING.md  epipolar_line_test.py  test_camera.py
tests/geom/: test_camera.py  test_camera_fisheye.py  test_camera_perspective.py  test_geom_utils.py  (+7 more)
utils/: Pose.py  Rotation.py  data.py
(+71 files in other folders)
