[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv_utils"
version = "0.2.1-alpha"
description = "Computer Vision utilities for research and development"
authors = [
    {name = "Sehyun Cha", email = "cshyundev@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["computer-vision", "robotics", "3d-vision", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy",
    "opencv-python", 
    "torch>=2.1.0",
    "scipy",
    "matplotlib",
    "scikit-image",
    "open3d",
    "tifffile",
    "absl-py",
    "rich",
    "dt-apriltags",
    "stag-python",
    "Pillow",
    "PyYAML",
]

[project.urls]
Homepage = "https://github.com/cshyundev/cv_utils"
Repository = "https://github.com/cshyundev/cv_utils"
Issues = "https://github.com/cshyundev/cv_utils/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-cov",
]
